removed blur on smaller screens

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -335,6 +335,9 @@ body{
     .respSpacer{
         height: 100vh;
     }
+    .blurAnim{
+        backdrop-filter: blur(0px);
+    }
     
 }
 .footer{
