--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -333,7 +333,10 @@ body{
         width: 100%;
     }
     .respSpacer{
-        height: 100vh;
+        height: 100dvh;
+    }
+    .spacer100vh{
+        height: 110vh;
     }
     .blurAnim{
         backdrop-filter: blur(0px);
