--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -4,8 +4,6 @@
     z-index:1;
     margin: 0;
     width: 100vw;
-    animation: fadeDown;
-    animation-duration: 1s;
 
 
 }
@@ -82,9 +80,18 @@ body{
     opacity: 1;
     transition: all 1s;
 }
+@keyframes goup{
+    0%{
+        transform: translateY(0);
+    }
+    100%{
+        transform: translateY(-100%);
+        border-bottom-left-radius: 4px;
+    }
+}
 .goUp{
-    transition: all 1s;
-    transform: translateY(-100%);
+    animation: goup ;
+    animation-duration: 1s;
 }
 .fadeOut{
     opacity: 0;
@@ -374,6 +381,14 @@ body{
 .hidden{
     transition: all 1s;
     opacity: 0;
+}
+.bgImgWave{
+    width: 50vw;
+    height: 100%;
+    position: absolute;
+    background-image: url(/assets/images/layered-waves-haikei.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .bgImg{
     background-image: url(/assets//images/chat.jpg);
