--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -90,7 +90,6 @@ body,html{
     right: 0;
     top:50%;
     left:50%;
-    
     transform: translate(-50%,-50%);
     
 }
@@ -100,10 +99,9 @@ body,html{
     background-position: center; 
     background-repeat: no-repeat;
 }
-@media screen and (max-width:1280px){
-    .bgImgAbout{
-        background-image: url(/assets/images/wave-haikeiabout2.svg); 
-    }
+
+@media screen and (max-width:600px) {
+    
     .logoCont.centerRow{
         flex-direction: column;
         height: 200vh;
@@ -131,6 +129,95 @@ body,html{
         transform: translateX(-50%);
     }
     
+}
+
+
+@media screen and (min-width:768px) {
+    .logoText{
+
+        font-size: large;
+        top:0;
+        left:50%;
+        transform: translateX(-50%);
+    }
+    
+    .logoCont.centerRow{
+        flex-direction: column;
+        height: 150vh;
+        overflow: hidden;
+        justify-content: flex-start;
+        align-items: center;
+       
+        
+    }
+    .logoImg{
+        width:30vw;
+        height:auto;
+    }
+    .gregImg {
+        margin-top: 10%;
+        display: flex;
+        justify-content: flex-start;
+        height: 60vh;
+        overflow: hidden;
+    }
+}
+
+@media screen and (min-width:992px){
+    .logoImg{
+        border-radius: 50%; 
+        height: auto;
+        width:20vw;
+        position: absolute;
+        right: 0;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+        
+    }
+    .logoCont.centerRow{
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        
+       
+        /* background-color: rgb(255, 255, 255); */
+    }
+    .logoText{
+        font-family: Anton, sans-serif; font-weight: 400; text-transform: uppercase; letter-spacing: 2px;
+        width: 50vw;
+        position: absolute;
+        text-align: center;
+        color:"white";
+        font-size:1vw;
+        top:50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    
+    }
+    .textBg{
+        width: 50vw;
+        position: relative;
+        height: 100vh;
+    }
+    .logoContImg{
+        width: 50vw;
+        height: 100vh;
+        /* color: rgb(0, 170, 255); */
+        position: relative;
+    }
+    .gregImg{
+        width: 50vw;
+        position: relative;
+        margin-top: 0;
+        height: 100vh;
+    }
+
 }
 /* .logoBgCol{
     position: relative;
