--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -86,11 +86,16 @@ body,html{
     left: 50%;
     transform: translateX();
 }
+.logoImg:hover{
+    box-shadow: -2px -1px 10px 9px rgba(111, 238, 0, 0.75);
+    cursor: pointer;
+}
 .logoImg{
     border-radius: 50%; 
     height: auto;
     width:20vw;
     position: absolute;
+    transition: all 1s;
     right: 0;
     top:50%;
     left:50%;
@@ -144,7 +149,14 @@ body,html{
         left:50%;
         transform: translateX(-50%);
     }
-    
+    .logoName{
+        color: white;
+        position: relative; 
+        text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+    }
+    .logoDetails{
+        display: inline;color: white;position: relative; font-size: xx-large; position: relative; text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+    }
     .logoCont.centerRow{
         flex-direction: column;
         height: 150vh;
