--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -23,8 +23,12 @@ body{
     justify-content: center;
     
 }
+.whiteTextShadow{
+    text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+}
 .preloaderHeader{
     color: white;
+
 }
 
 .columnCont{
