--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -28,7 +28,18 @@ body{
 }
 .preloaderHeader{
     color: white;
+    text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+    justify-content: space-between;
+    display: flex;
+    margin-top: 10%;
+    gap: 3px;
+    
 
+}
+.preloaderHeader span{
+    display: inline-block;
+    height: 100%;
+    position: relative;
 }
 
 .columnCont{
@@ -97,6 +108,11 @@ body{
     100%{
         transform: translateY(-100%);
         border-bottom-left-radius: 4px;
+    }
+}
+@keyframes bounce {
+    100%{
+        transform: translateY(-40px);
     }
 }
 .goUp{
