--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -87,7 +87,10 @@ body,html{
     transform: translateX();
 }
 .logoImg:hover{
-    box-shadow: 0px 3px 10px 5px rgba(255, 255, 255, 0.75);
+    box-shadow: 0px 3px 10px 5px rgba(255, 255, 255, 0.75)
+
+    
+    ;
     cursor: pointer;
 }
 .logoImg{
@@ -102,7 +105,7 @@ body,html{
     transform: translate(-50%,-50%);
     
 }
-.bgImgAbout{
+#bgImgAbout{
     background-image: url(/assets/images/wave-haikeiabout.svg); 
     background-size: cover;
     background-position: center; 
