--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -153,6 +153,9 @@ body,html{
         left:50%;
         transform: translateX(-50%);
     }
+    .logoDetails{
+        display: inline;color: white;position: relative; font-size: xx-large; position: relative; text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+    }
     
 }
 
