--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -4,15 +4,13 @@ body,html{
     margin: 0;
 
 }
-.logoName{
-    color: white;
-    position: relative; 
-    text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
-}
-.logoCont.centerRow{
+.logoCont{
     width: 100vw;
     height: 100vh;
     display: flex;
+}
+.logoCont.centerRow{
+   
     flex-direction: row;
     width: 100%;
     height: 100%;
@@ -84,10 +82,6 @@ body,html{
     /* color: rgb(0, 170, 255); */
     position: relative;
 }
-.animated-text{
-    color:white;
-    text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
-}
 .orangeGrad{
     background-image:linear-gradient(to right, rgb(255, 136, 0), rgb(233, 85, 0)) ;
 }
@@ -117,16 +111,13 @@ body,html{
 #bgImgAbout{
     background-image: url(/assets/images/wave-haikeiabout.svg); 
     background-size: cover;
+    height: fit-content;
     background-position: center; 
     background-repeat: no-repeat;
 }
 
 @media screen and (max-width:600px) {
-    .logoName{
-        color: white;
-        position: relative; 
-        text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
-    }
+    
     .logoCont.centerRow{
         flex-direction: column;
         height: 200vh;
@@ -153,12 +144,16 @@ body,html{
         left:50%;
         transform: translateX(-50%);
     }
-    .logoDetails{
-        display: inline;color: white;position: relative; font-size: xx-large; position: relative; text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
-    }
     
 }
-
+.logoName{
+    color: white;
+    position: relative; 
+    text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+}
+.logoDetails{
+    display: inline;color: white;position: relative; font-size: xx-large; position: relative; text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
+}
 
 @media screen and (min-width:768px) {
     .logoText{
@@ -168,14 +163,7 @@ body,html{
         left:50%;
         transform: translateX(-50%);
     }
-    .logoName{
-        color: white;
-        position: relative; 
-        text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
-    }
-    .logoDetails{
-        display: inline;color: white;position: relative; font-size: xx-large; position: relative; text-shadow:0px 3px 2px rgb(255, 255, 255, 0.4);
-    }
+   
     .logoCont.centerRow{
         flex-direction: column;
         height: 150vh;
