added responsiveness to hide image on mobile devices and smaller ones

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -149,12 +149,14 @@ body{
     .mainHeader{
         font-size: 8vw;
     }
+   
 }
 .fadeInRightEnd{
     animation: moveRight;
     animation-duration: 1s;
     
 }
+
 .fadeInLeftEndFaster{
     animation: moveLeft;
     animation-duration: 0.4s;
@@ -514,11 +516,18 @@ i:hover{
   
     display: block;
 }
-@media screen and (max-height: 720px) {
+@media screen and (max-width: 1025px) {
     .preloaderImg{
         height: 30%;
     }
-    
+    .spacer100vh{
+        display: none;
+        
+    }
+    .hideResp{
+        height:0;
+        display: none;
+    }
 }
 @media screen and (max-height: 1080px) and (min-height: 720px){
     .preloaderImg{
