added fix of canvas scroll not working

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -497,6 +497,7 @@ i:hover{
 }
 canvas{
     width:100vw;
+    touch-action: auto !important;
 }
 .chartGenImg{
     background-image: url(/assets/images/business.jpg)
