updated canvas size

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -605,6 +605,10 @@ canvas{
     
    
 }
+canvas{
+    width:100vw;
+    height: 101vh;
+}
 /* @property --fill{
     syntax: '<percentage>';
     inherits: true;
