--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -138,6 +138,9 @@ body,html{
         align-items: center;
         
     }
+    canvas{
+        height: 200vh;
+    }
     .bgImgCont{
         height:200vh;
     }
