--- a/assets/stylesheets/about.css
+++ b/assets/stylesheets/about.css
@@ -6,6 +6,9 @@ body,html{
     margin: 0;
 
 }
+span{
+    display: inline;
+}
 .logoCont{
     width: 100vw;
     height: 100vh;
@@ -138,15 +141,6 @@ body,html{
         align-items: center;
         
     }
-    canvas{
-        height: 200vh;
-    }
-    .bgImgCont{
-        height:200vh;
-    }
-     #bgImg{
-        height: 200vh;
-    }
     .gregImg {
         margin-top: 20%;
         display: flex;
@@ -193,12 +187,6 @@ body,html{
         align-items: center;
        
         
-    }
-    #bgImg{
-        height: 150vh;
-    }
-    .bgImgCont{
-        height:150vh;
     }
     .logoImg{
         width:30vw;
