--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -14,6 +14,7 @@ body{
     position: static;
 }
 .preloader{
+    resize: both;
     width: 100vw; 
     background-color: rgb(21, 21, 21);
     height: 100%;
